<resources>
    <string name="app_name">HealthApp1</string>
    <string name="fitnessapp">FITNESSAPP</string>
    <string name="mood_recording">Mood recording</string>
    <string name="physical_activity_recording">Physical activity recording</string>
    <string name="progress">Progress</string>
    <string name="cancel">CANCEL</string>
    <string name="you_can_record_here_mood">You can record here Mood</string>
    <string name="ruhig">ruhig</string>
    <string name="unzufrieden">unzufrieden</string>
    <string name="zufrieden">zufrieden</string>
    <string name="energielos">energielos</string>
    <string name="energiegeladen">energiegeladen</string>
    <string name="angespannt">angespannt</string>
    <string name="entspannt">entspannt</string>
    <string name="save">save</string>
    <string name="back">back</string>
    <string name="m_de">Müde</string>
    <string name="unruhig">unruhig</string>
    <string name="wohl">wohl</string>
    <string name="unwohl">unwohl</string>
    <string name="wach">wach</string>
    <string name="in_den_letzten_f_hlte_ich_mich_im_durchschnitt">in den letzten fühlte ich mich im Durchschnitt</string>
    <string name="submit">dd</string>
    <string name="haben_sie_seit_letzten_abfrage_eines_oder_mehrere_negative_ereignisse_erlebt_wie_intensiv_war_das_bedeutendste_negative_ereignis">Haben Sie seit letzten Abfrage eines oder mehrere negative Ereignisse erlebt? Wie intensiv war das bedeutendste negative Ereignis?</string>
    <string name="haben_sie_seit_der_letzten_abfragen_eines_oder_mehrere_positive_ereignisse_erlebt_wie_intensiv_war_das_bedeutendste_positive_ereignis">Haben Sie seit der letzten Abfragen eines oder mehrere positive Ereignisse erlebt?Wie intensiv war das bedeutendste positive Ereignis?</string>
    <string name="next">NEXT</string>
    <string name="__0">0</string>
    <string name="_0">0</string>
    <string name="_100">100</string>
    <string name="_next">NEXT</string>
    <string name="sind_sie_im_moment_alleine">Sind Sie im Moment alleine ?</string>
    <string name="wenn_sie_an_die_personen_denken_die_sie_gerade_umgeben_inwiefern_trifft_folgende_aussage_zu_ich_mag_diese_leute_nicht">Wenn Sie an die Personen denken, die Sie gerade umgeben, inwiefern trifft folgende Aussage zu? ich mag diese leute nicht.</string>
    <string name="von_welchen_menschen_sind_sie_momentant_umgeben">Von welchen Menschen sind Sie momentant umgeben?</string>
    <string name="wo_befinden_sie_sich_gerade">Wo befinden Sie sich gerade?</string>
    <string name="todo">toDo</string>
    <string name="gegenw_rtig_bin_ich_mit_mir_selbst_zufrieden">Gegenwärtig bin ich mit mir selbst zufrieden!</string>
    <string name="im_augenblick_halte_ich_mich_f_r_einen_versager">Im Augenblick halte ich mich für einen Versager!</string>
    <string-array name="YesOrNo">
        <item> </item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="SocialSituation">
        <item> </item>
        <item>Lebenspartner*in</item>
        <item>Familie</item>
        <item>Freunde</item>
        <item>Arbeitskollg*innen</item>
        <item>Fremde</item>
    </string-array>
    <string-array name="Context">
        <item> </item>
        <item>Zuhause</item>
        <item>Arbeit</item>
        <item>Sport</item>
        <item>sonstiges Hoppy</item>
        <item>Einkaufen</item>
        <item>Besuch</item>
        <item>Sonstiges</item>
    </string-array>

</resources>