<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/fit2">

    <Button
        android:id="@+id/button"
        style="@style/CardView.Dark"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="247dp"
        android:background="@drawable/gradient"
        android:text="@string/mood_recording" />

    <Button
        android:id="@+id/button2"
        style="@style/CardView.Dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="139dp"
        android:layout_marginBottom="181dp"
        android:background="@drawable/gradient"
        android:text="@string/physical_activity_recording" />

    <Button
        android:id="@+id/button3"
        style="@style/CardView.Dark"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="110dp"
        android:background="@drawable/gradient"
        android:text="@string/progress" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="171dp"
        android:layout_marginBottom="29dp"
        android:background="@drawable/gradient"
        android:text="@string/cancel"
        style="@style/CardView.Dark"/>
</RelativeLayout>