<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventAppraisal">

    <TextView
        android:id="@+id/textEvent1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="566dp"
        android:text="@string/haben_sie_seit_letzten_abfrage_eines_oder_mehrere_negative_ereignisse_erlebt_wie_intensiv_war_das_bedeutendste_negative_ereignis" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="493dp"
        android:text="@string/_100" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="44dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="317dp"
        android:layout_marginBottom="490dp"
        android:text="@string/_0" />

    <SeekBar
        android:id="@+id/seekBarEvent1"
        android:layout_width="342dp"
        android:layout_height="62dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="452dp"
        android:max="100"
        android:progress="0"
        android:scaleX="1"
        android:scaleY="2"
        android:thumb="@color/white" />

    <TextView
        android:id="@+id/textViewEvent1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="185dp"
        android:layout_marginBottom="461dp"
        tools:text="TextView" />

    <TextView
        android:id="@+id/textEvent2"
        android:layout_width="383dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="343dp"
        android:text="@string/haben_sie_seit_der_letzten_abfragen_eines_oder_mehrere_positive_ereignisse_erlebt_wie_intensiv_war_das_bedeutendste_positive_ereignis" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="302dp"
        android:text="100" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="356dp"
        android:layout_marginBottom="299dp"
        android:text="@string/_0" />

    <SeekBar
        android:id="@+id/seekBarEvent2"
        android:layout_width="356dp"
        android:layout_height="71dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="258dp"
        android:max="100"
        android:progress="0"
        android:scaleX="1"
        android:scaleY="2"
        android:thumb="@color/white" />

    <TextView
        android:id="@+id/textViewEvent2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="171dp"
        android:layout_marginBottom="241dp"
        tools:text="TextView" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="10dp"
        android:text="@string/next" />


</RelativeLayout>