<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:scaleX="1"
    android:scaleY="1"
    tools:context=".SocialContext">


    <include layout="@layout/stepper" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="156dp"
        android:layout_height="47dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="186dp"
        android:layout_marginBottom="374dp"
        android:background="@drawable/spinnerbackground"
        android:paddingBottom="13dp"
        android:spinnerMode="dropdown"
        android:textColor="@color/white"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textViewSpinner2"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="319dp"
        android:text="@string/von_welchen_menschen_sind_sie_momentant_umgeben"
        android:textAlignment="center"
        android:textColor="#0B0909"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="150dp"
        android:layout_height="51dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="183dp"
        android:layout_marginBottom="272dp"
        android:background="@drawable/spinnerbackground"
        android:spinnerMode="dropdown"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="309dp"
        android:layout_height="19dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="438dp"
        android:text="@string/sind_sie_im_moment_alleine"
        android:textColor="#120F0F"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="262dp"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="119dp"
        android:layout_marginBottom="546dp"
        android:text="@string/wo_befinden_sie_sich_gerade"
        android:textColor="#090707"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="183dp"
        android:layout_marginBottom="477dp"
        android:background="@drawable/spinnerbackground"
        android:contentDescription="@string/_0"
        android:minHeight="48dp"
        android:spinnerMode="dropdown"
        tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />


</RelativeLayout>